--- a/org.erlide.ui/src/org/erlide/ui/prefs/plugin/ErlEditorMessages.properties
+++ b/org.erlide.ui/src/org/erlide/ui/prefs/plugin/ErlEditorMessages.properties
@@ -87,6 +87,8 @@ Prefs_Dot_nl=After .
 Prefs_End_paren=Closing paren ), }, ]
 Prefs_Binary_begin=Binary <<
 Prefs_Paren=Opening paren (, {, [
+Prefs_record_fields=Record fields
+
 SmartTypingPrefs_Desc=Smart typing preferences
 SmartTypingPrefs_AutomaticallyClose=Automatically close
 SmartTypingPrefs_Strings="Strings"
