--- a/org.erlide.ui/src/org/erlide/ui/prefs/PreferenceMessages.properties
+++ b/org.erlide.ui/src/org/erlide/ui/prefs/PreferenceMessages.properties
@@ -1,7 +1,7 @@
 
-ErlangPreferencePage_2=Erlang IDE by the Erlide team (c) 2004,2010
+ErlangPreferencePage_2=Erlang IDE (revision version) by the Huaqiao Long
 ErlangPreferencePage_3=Project site\: <a href\="http\://erlide.org">http\://erlide.org</a>
-ErlangPreferencePage_4=Update site\: <a href\="http\://erlide.org/update">http\://erlide.org/update</a>
+ErlangPreferencePage_4=Update site\: <a href\="http\://erlide.org/">http\://erlide.org/update</a>
 
 AddRuntimeDialog_add=&Add...
 AddRuntimeDialog_remove=&Remove
